--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL = Data Source=database.db 
+CloudinaryName = dt8dw9v5
+ApiKey = 239562928537284
+ApiSecret = ciS06RFHconHxQ3Ti3hAEA41E4c
