feat: authorize works

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5042",
+    "Audience": "http://localhost:5042",
+    "Key": "UnaClaveSuperSeguraDeMasDe32Caracteres1234!"
+  }
 }
